--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <style>
+        @font-face {
+            font-family: Engravers;
+            src: url(../../style/font/ENGR.ttf);
+        }
+
+        @font-face {
+            font-family: EngraversBold;
+            src: url(../../style/font/EngraversMTBold.ttf);
+        }
+
         .test {
             background-color: black;
             width: calc(100vw - 70px);
@@ -26,7 +36,7 @@
             background-color: yellowgreen;
             width: 50vw;
             height: 100vh;
-            margin-left: 40px;
+            margin-left: 5%;
         }
 
         .ArtLogoDiv {
@@ -40,6 +50,14 @@
 
         .upLogo {
             width: 100%;
+        }
+
+        h1 {
+            font-family: EngraversBold;
+        }
+
+        p {
+            font-family: EngraversBold;
         }
     </style>
 </head>
