--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -28,7 +28,7 @@
         .homepageA-left {
             background-color: aqua;
             height: 100vh;
-            width: 350px;
+            width: 33vw;
             margin-left: 70px;
         }
 
