--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -46,6 +46,7 @@
         .upLogoDiv {
             margin-top: 10%;
             transform: rotate(10deg);
+            width: 100%
         }
 
         .upLogo {
