--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -19,6 +19,15 @@
             src: url(../../style/font/EngraversMTBold.ttf);
         }
 
+        @font-face {
+            font-family: NotoSansTC-Medium;
+            src: url(../../style/font/NotoSansTC-Medium.otf)
+        }
+
+        .English {
+            font-family: EngraversBold
+        }
+
         .test {
             background-color: black;
             width: calc(100vw - 70px);
@@ -54,11 +63,11 @@
         }
 
         h1 {
-            font-family: EngraversBold;
+            font-family: NotoSansTC;
         }
 
         p {
-            font-family: EngraversBold;
+            font-family: NotoSansTC;
         }
     </style>
 </head>
@@ -77,10 +86,10 @@
                     <h1>鹽田千春</h1>
                 </div>
                 <div>
-                    <p>現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在一ARTDDICT</p>
+                    <p>現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在一<span class="English">ARTDDICT</span>></p>
                 </div>
                 <div>
-                    <p>Go Shop</p>
+                    <p class="English">Go Shop</p>
                 </div>
             </div>
             <div class="homepageA-right">
