--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -25,7 +25,7 @@
         }
 
         .English {
-            font-family: EngraversBold
+            font-family: Engravers;
         }
 
         .test {
@@ -38,7 +38,7 @@
             background-color: aqua;
             height: 100vh;
             width: 33vw;
-            margin-left: 70px;
+            margin-left: 8%;
         }
 
         .homepageA-right {
@@ -63,11 +63,11 @@
         }
 
         h1 {
-            font-family: NotoSansTC;
+            font-family: NotoSansTC-Medium;
         }
 
         p {
-            font-family: NotoSansTC;
+            font-family: NotoSansTC-Medium;
         }
     </style>
 </head>
