--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -24,6 +24,14 @@
             src: url(../../style/font/NotoSansTC-Medium.otf)
         }
 
+        h1 {
+            font-family: NotoSansTC-Medium;
+        }
+
+        p {
+            font-family: NotoSansTC-Medium;
+        }
+
         .English {
             font-family: Engravers;
         }
@@ -62,12 +70,32 @@
             width: 100%;
         }
 
-        h1 {
-            font-family: NotoSansTC-Medium;
+        .homepageA-word-div {
+            margin-top: 5%;
         }
 
-        p {
-            font-family: NotoSansTC-Medium;
+        .homepageA-word {
+            font-size: 3.5rem;
+        }
+
+        .homepageA-wordB-div {
+            margin-top: 5%;
+        }
+
+        .homepageA-wordB {
+            font-size: 1.1rem;
+        }
+
+        .homepageA-box {
+            background-color: #1D0Aff;
+            width: 13vw;
+            height: 7vh;
+            margin-top: 5%;
+        }
+
+        .homepageA-box-word {
+            text-align: center;
+            justify-content: center;
         }
     </style>
 </head>
@@ -82,14 +110,15 @@
                 <div class="upLogoDiv">
                     <img class="upLogo" src="./img/upLogo.png" alt="">
                 </div>
-                <div>
-                    <h1>鹽田千春</h1>
+                <div class="homepageA-word-div">
+                    <h1 class="homepageA-word">鹽田千春</h1>
                 </div>
-                <div>
-                    <p>現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在一<span class="English">ARTDDICT</span>></p>
+                <div class="homepageA-wordB-div">
+                    <p class="homepageA-wordB">現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在一<span
+                            class="English">ARTDDICT</span></p>
                 </div>
-                <div>
-                    <p class="English">Go Shop</p>
+                <div class="homepageA-box ">
+                    <p class="English homepageA-box-word">Go Shop</p>
                 </div>
             </div>
             <div class="homepageA-right">
