--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -43,7 +43,7 @@
         }
 
         .homepageA-left {
-            background-color: aqua;
+            background-color: black;
             height: 100vh;
             width: 33vw;
             margin-left: 8%;
@@ -63,7 +63,7 @@
         .upLogoDiv {
             margin-top: 10%;
             transform: rotate(10deg);
-            width: 100%
+            width: 30vw;
         }
 
         .upLogo {
@@ -76,6 +76,7 @@
 
         .homepageA-word {
             font-size: 3.5rem;
+            color: #81FC4D;
         }
 
         .homepageA-wordB-div {
@@ -84,6 +85,7 @@
 
         .homepageA-wordB {
             font-size: 1.1rem;
+            color: #81FC4D;
         }
 
         .homepageA-box {
@@ -94,6 +96,7 @@
         }
 
         .homepageA-box-word {
+            color: white;
             text-align: center;
             justify-content: center;
         }
