--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -80,7 +80,7 @@
         }
 
         .homepageA-wordB-div {
-            margin-top: 5%;
+            margin-top: 10%;
         }
 
         .homepageA-wordB {
@@ -89,16 +89,17 @@
         }
 
         .homepageA-box {
+            border: none;
+            border-radius: 0;
             background-color: #1D0Aff;
-            width: 13vw;
-            height: 7vh;
-            margin-top: 5%;
+            margin-top: 10%;
         }
 
         .homepageA-box-word {
             color: white;
             text-align: center;
-            justify-content: center;
+            padding: 12px 10px 0 10px;
+
         }
     </style>
 </head>
@@ -120,9 +121,9 @@
                     <p class="homepageA-wordB">現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在一<span
                             class="English">ARTDDICT</span></p>
                 </div>
-                <div class="homepageA-box ">
+                <button onclick="javascript:location.href='productList'" class="homepageA-box btn-lg">
                     <p class="English homepageA-box-word">Go Shop</p>
-                </div>
+                </button>
             </div>
             <div class="homepageA-right">
             </div>
