--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -75,7 +75,7 @@
         }
 
         .homepageA-word {
-            font-size: 7.5vw;
+            font-size: 4rem;
             color: #81FC4D;
         }
 
@@ -84,7 +84,7 @@
         }
 
         .homepageA-wordB {
-            font-size: 2vw;
+            font-size: 1.4rem;
             color: #81FC4D;
         }
 
