--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -93,13 +93,13 @@
             border-radius: 0;
             background-color: #1D0Aff;
             margin-top: 10%;
-        }
-
-        .homepageA-box-word {
             color: white;
             text-align: center;
-            padding: 12px 10px 0 10px;
+            padding: 10px;
+        }
 
+        .btn:hover {
+            color: white;
         }
     </style>
 </head>
@@ -118,11 +118,11 @@
                     <h1 class="homepageA-word">鹽田千春</h1>
                 </div>
                 <div class="homepageA-wordB-div">
-                    <p class="homepageA-wordB">現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在一<span
+                    <p class="homepageA-wordB">現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在———<span
                             class="English">ARTDDICT</span></p>
                 </div>
-                <button onclick="javascript:location.href='productList'" class="homepageA-box btn-lg">
-                    <p class="English homepageA-box-word">Go Shop</p>
+                <button onclick="javascript:location.href='productList'" class="homepageA-box btn English ">
+                    Go Shop
                 </button>
             </div>
             <div class="homepageA-right">
