--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -95,7 +95,7 @@
             margin-top: 10%;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 10px 50px;
         }
 
         .btn:hover {
@@ -121,7 +121,7 @@
                     <p class="homepageA-wordB">現在藝術大師鹽田千春<br />2021『這樣的千春』展覽系列商品<br />只有在———<span
                             class="English">ARTDDICT</span></p>
                 </div>
-                <button onclick="javascript:location.href='productList'" class="homepageA-box btn English ">
+                <button onclick="javascript:location.href='productList'" class="homepageA-box btn-lg English ">
                     Go Shop
                 </button>
             </div>
