--- a/src/pages/product/productHomepage.html
+++ b/src/pages/product/productHomepage.html
@@ -43,7 +43,7 @@
         }
 
         .homepageA-left {
-            background-color: black;
+            background-color: aqua;
             height: 100vh;
             width: 33vw;
             margin-left: 8%;
@@ -51,9 +51,9 @@
 
         .homepageA-right {
             background-color: yellowgreen;
-            width: 50vw;
+            width: 53vw;
             height: 100vh;
-            margin-left: 5%;
+            margin-left: 3%;
         }
 
         .ArtLogoDiv {
@@ -101,6 +101,45 @@
         .btn:hover {
             color: white;
         }
+
+        .homepageA-right-box {
+            background-color: yellow;
+            width: 52vw;
+            height: 80vh;
+            margin-top: 20%;
+            position: relative;
+        }
+
+        .homepageA-right-box-picA {
+            background-color: forestgreen;
+            width: 26vw;
+            height: 80vh;
+        }
+
+        .homepageA-right-box-picB {
+            background-color: blue;
+            width: 25vw;
+            height: 20vh;
+            margin-left: 3%
+        }
+
+        .homepageA-right-box-picC {
+            background-color: pink;
+            width: 15vh;
+            height: 15vh;
+            position: absolute;
+            left: 52.5%;
+            bottom: 0%;
+        }
+
+        .homepageA-right-box-picD {
+            background-color: grey;
+            width: 15vw;
+            height: 55vh;
+            position: absolute;
+            right: 0%;
+            bottom: 0%;
+        }
     </style>
 </head>
 
@@ -126,6 +165,12 @@
                 </button>
             </div>
             <div class="homepageA-right">
+                <div class="homepageA-right-box d-flex">
+                    <div class="homepageA-right-box-picA"></div>
+                    <div class="homepageA-right-box-picB"></div>
+                    <div class="homepageA-right-box-picC"></div>
+                    <div class="homepageA-right-box-picD"></div>
+                </div>
             </div>
         </div>
     </div>
