--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -125,10 +125,10 @@
 
         .homepageA-right-box-picC {
             background-color: pink;
-            width: 15vh;
-            height: 15vh;
+            width: 17vh;
+            height: 17vh;
             position: absolute;
-            left: 52.5%;
+            left: 52.7%;
             bottom: 0%;
         }
 
@@ -139,6 +139,12 @@
             position: absolute;
             right: 0%;
             bottom: 0%;
+        }
+
+        .try {
+            background-color: red;
+            width: 10vw;
+            height: 20vh;
         }
     </style>
 </head>
@@ -174,6 +180,7 @@
             </div>
         </div>
     </div>
+
 
 
 
