--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>ARTDDICT</title>
   </head>
   <body>
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v11.0&appId=4372278766148991&autoLogAppEvents=1" nonce="jNhOVRAH"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
